welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:3: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
    while (isFacingTrail()) {
                        ^SlugSnail:15: error: type mismatch;
 found   : Unit
 required: Boolean
  while (!estFaceMur()) {
  ^